--- a/NativeAuthSampleApp/Base.lproj/Main.storyboard
+++ b/NativeAuthSampleApp/Base.lproj/Main.storyboard
@@ -156,7 +156,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="ejw-ha-Oyo" userLabel="Sign-up Stack View">
-                                        <rect key="frame" x="0.0" y="263.66666666666669" width="353" height="312.00000000000006"/>
+                                        <rect key="frame" x="0.0" y="263.66666666666663" width="353" height="269.66666666666663"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Sign up to access Woodgrove Music" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B36-Jl-VaH">
                                                 <rect key="frame" x="0.0" y="0.0" width="353" height="0.0"/>
@@ -203,7 +203,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="48i-eY-BFg">
-                                                <rect key="frame" x="0.0" y="59.999999999999993" width="353" height="28.666666666666664"/>
+                                                <rect key="frame" x="0.0" y="60" width="353" height="4"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Reenter password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LbB-Ab-YsW">
                                                         <rect key="frame" x="0.0" y="0.0" width="353" height="0.0"/>
@@ -212,30 +212,30 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Reenter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BCz-ec-0ec">
-                                                        <rect key="frame" x="0.0" y="4.0000000000000018" width="353" height="24.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="4" width="353" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="K4c-6f-AhC">
-                                                <rect key="frame" x="0.0" y="101.66666666666661" width="353" height="58.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="77" width="353" height="40.666666666666657"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Display name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPm-w4-mxE">
-                                                        <rect key="frame" x="0.0" y="0.0" width="353" height="20.333333333333332"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="353" height="2.6666666666666665"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Display name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="efi-hf-Md2">
-                                                        <rect key="frame" x="0.0" y="24.333333333333371" width="353" height="34"/>
+                                                        <rect key="frame" x="0.0" y="6.6666666666666288" width="353" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="IcW-bL-xBm">
-                                                <rect key="frame" x="0.0" y="173" width="353" height="58.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="130.66666666666663" width="353" height="58.333333333333343"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NGj-dw-elK">
                                                         <rect key="frame" x="0.0" y="0.0" width="353" height="20.333333333333332"/>
@@ -244,20 +244,20 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Country" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cAi-We-gxD">
-                                                        <rect key="frame" x="0.0" y="24.333333333333314" width="353" height="34"/>
+                                                        <rect key="frame" x="0.0" y="24.333333333333371" width="353" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rwQ-KT-Tke">
-                                                <rect key="frame" x="0.0" y="244.33333333333331" width="353" height="20.333333333333314"/>
+                                                <rect key="frame" x="0.0" y="201.99999999999994" width="353" height="20.333333333333343"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b67-RN-KhO">
-                                                <rect key="frame" x="0.0" y="277.66666666666669" width="353" height="34.333333333333314"/>
+                                                <rect key="frame" x="0.0" y="235.33333333333331" width="353" height="34.333333333333314"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Sign-up"/>
                                                 <connections>
@@ -267,16 +267,46 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="mFM-Hq-JAF" userLabel="Profile Stack View">
-                                        <rect key="frame" x="0.0" y="612.66666666666663" width="353" height="34.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="570.33333333333337" width="353" height="76.666666666666629"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xh-Tz-0h6">
-                                                <rect key="frame" x="0.0" y="0.0" width="353" height="34.333333333333336"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="filled" title="Sign Out"/>
-                                                <connections>
-                                                    <action selector="signOutPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Jg-CN-JbO"/>
-                                                </connections>
-                                            </button>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z6Z-NW-ycK">
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="24"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAv-dq-iDU">
+                                                        <rect key="frame" x="0.0" y="0.0" width="48" height="24"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xh-Tz-0h6">
+                                                        <rect key="frame" x="48" y="0.0" width="305" height="24"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title="Sign Out"/>
+                                                        <connections>
+                                                            <action selector="signOutPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Jg-CN-JbO"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Claims" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m1p-L8-9qZ">
+                                                <rect key="frame" x="0.0" y="24" width="353" height="26.333333333333329"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Access token" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0K8-di-cKz">
+                                                <rect key="frame" x="0.0" y="50.333333333333258" width="353" height="26.333333333333329"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zWo-7j-jN4">
+                                                <rect key="frame" x="0.0" y="76.666666666666629" width="353" height="0.0"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ky9-zH-Ydy" userLabel="Results Stack View">
@@ -305,6 +335,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Login" image="person.crop.circle" catalog="system" id="qWR-sX-H51"/>
                     <connections>
+                        <outlet property="accessTokenTextView" destination="zWo-7j-jN4" id="qWR-gR-xpy"/>
                         <outlet property="emailTextField" destination="jYK-e0-AbA" id="7J7-7n-8JN"/>
                         <outlet property="headerLabel" destination="POR-Hb-X33" id="AVE-DL-Nk1"/>
                         <outlet property="passwordTextField" destination="RQU-kF-yPS" id="6iW-9V-1gZ"/>
@@ -313,8 +344,14 @@
                         <outlet property="signInButton" destination="2Bd-5E-YnL" id="Bb6-jD-w5a"/>
                         <outlet property="signOutButton" destination="1xh-Tz-0h6" id="vzL-BZ-BrH"/>
                         <outlet property="signUpButton" destination="b67-RN-KhO" id="rMu-pb-700"/>
+                        <outlet property="signUpCountryTextField" destination="cAi-We-gxD" id="Jj3-IS-8cB"/>
+                        <outlet property="signUpEmailTextField" destination="jDr-fY-udk" id="h3k-TH-TtN"/>
+                        <outlet property="signUpNameTextField" destination="efi-hf-Md2" id="A2p-jd-OGV"/>
+                        <outlet property="signUpPasswordTextField" destination="baU-aY-5uH" id="DRf-ti-e5c"/>
+                        <outlet property="signUpReenterTextField" destination="BCz-ec-0ec" id="eIs-iG-Vnz"/>
                         <outlet property="singInContainer" destination="6hq-Eh-SmO" id="uad-4k-ML5"/>
                         <outlet property="singUpContainer" destination="ejw-ha-Oyo" id="xom-Lw-hr7"/>
+                        <outlet property="welcomeTo" destination="ZAv-dq-iDU" id="Jpd-IH-0qu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
